--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -48,6 +48,7 @@
     }
 
     .fonctionnement {
+        align-self: center;
         ol {
             counter-reset: item;
             list-style-type: none;
