--- a/scss/_menus.scss
+++ b/scss/_menus.scss
@@ -111,6 +111,13 @@
                         font-weight: 300;
                         font-size: 15.04px;
                         line-height: 17.63px;
+                        //Rajout du saut a la ligne auto (fonctionne pas, laisse un écart trop grand avec la ligne d'au dessus)
+                        //Modifié la hauteur de ligne génére une coupure horizontale du texte
+                        /* display: block;
+                        white-space: pre;
+                        &::before{
+                            content: '\A';
+                        } */
                     }
                 }
                 &_price {
