--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,6 +41,9 @@
   font-size: 18px;
   line-height: 21.09px;
 }
+.index .fonctionnement {
+  align-self: center;
+}
 .index .fonctionnement ol {
   counter-reset: item;
   list-style-type: none;
@@ -293,6 +296,11 @@
   font-weight: 300;
   font-size: 15.04px;
   line-height: 17.63px;
+  /* display: block;
+  white-space: pre;
+  &::before{
+      content: '\A';
+  } */
 }
 .menus .menu-container section .card_price {
   align-self: end;
@@ -366,20 +374,18 @@
 */
 @keyframes loading {
   0% {
-    opacity: 1;
     height: 100%;
+    visibility: visible;
   }
   50% {
-    opacity: 0.5;
     height: 100%;
   }
   99% {
-    opacity: 0.01;
     height: 100%;
   }
   100% {
-    opacity: 0;
     height: 0%;
+    visibility: hidden;
   }
 }
 #loader {
